<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@mipmap/ic_launcher"
               android:id="@+id/receiverAvatar"
               app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Penerima:"
            android:id="@+id/label"
            app:layout_constraintLeft_toRightOf="@id/receiverAvatar"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/receiverName"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/receiverAvatar"
            android:layout_height="wrap_content"
            android:text="Hello world!"
            app:layout_constraintTop_toBottomOf="@id/label"
    />

    <EditText android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toLeftOf="@id/clearIcon"
              app:layout_constraintTop_toBottomOf="@id/receiverAvatar"
              android:inputType="number"
              android:id="@+id/inputAmount"/>

    <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAmount"
            tools:text="Saldo DANA Anda : 9999999"
    />

    <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintLeft_toRightOf="@id/inputAmount"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/inputAmount"
            app:layout_constraintBottom_toBottomOf="@id/inputAmount"
            android:src="@mipmap/ic_launcher"/>

</androidx.constraintlayout.widget.ConstraintLayout>